--- a/snprc_ehr/src/client/SndLookupsManagement/styles/sndLookupsManagement.scss
+++ b/snprc_ehr/src/client/SndLookupsManagement/styles/sndLookupsManagement.scss
@@ -6,7 +6,8 @@
 
 .lk-body-title {
   width: 60%;
-  transform: translate(15%, 0%);
+  transform: translate(16%, 0%);
+  display: block;
 }
 
 .snd-lookups-grid {
@@ -18,7 +19,7 @@
   margin: auto;
   border-radius: 5px;
   transform: translate(0, -20%);
-  width: 82%;
+  width: 81%;
   left: .8%;
 }
 
@@ -76,8 +77,26 @@
 }
 
 .input-group-addon {
-  width: 30px !important;
+  width: 35px !important;
   border-radius: 5px;
+  padding: 6px 12px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1;
+  color: #555;
+  text-align: center;
+  background-color: #eee;
+  border: 1px solid #ccc;
+}
+
+.input-group-addon, .input-group-btn, .input-group .form-control {
+  display: table-cell;
+}
+
+.input-group-addon, .input-group-btn {
+  width: 1%;
+  white-space: nowrap;
+  vertical-align: middle;
 }
 
 .grid-panel__input-group {
@@ -85,7 +104,7 @@
   margin-left: 5px;
 }
 
-.grid-panel .grid-header-cell .dropdown-menu {
+.grid-header-cell__dropdown-menu {
   position: fixed;
 }
 
@@ -136,13 +155,52 @@
   touch-action: manipulation;
   cursor: pointer;
   border-radius: 5px;
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: normal;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  background-image: none;
+  border: 1px solid rgba(0,0,0,0);
+  padding: 6px 12px;
+  font-size: 12px;
+  line-height: 1.428571429;
 }
 
 .form-control {
   border-radius: 5px;
+  //display: inline-block;
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 .dropdown-menu {
   border-radius: 5px;
+}
+
+.ws-pre-wrap {
+  color: #555;
+}
+
+.lookups-placeholder {
+  color: #555;
+  display: flex;
+  //vertical-align: middle;
+  position: absolute;
+
 }
 
 .selection-status__count, .selection-status__select-all {
@@ -197,6 +255,11 @@
   .grid-panel__grid .table-responsive {
     height: 28vh !important;
   }
+
+  .lookups-placeholder {
+
+  }
+
 }
 
 @media screen and (min-width: 540px) and (max-width: 1280px) {
@@ -207,7 +270,6 @@
   .grid-panel__grid .table-responsive {
     height: 38vh !important;
   }
-
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1919px) {
@@ -222,6 +284,9 @@
   .grid-panel__search-input {
     width: 75% !important;
   }
+  .lookups-placeholder {
+    transform: translate(30%, 900%);
+  }
 }
 
 @media screen and (min-width: 1920px) {
@@ -234,5 +299,8 @@
   }
   .grid-panel__search-input {
     width: 75% !important;
+  }
+  .lookups-placeholder {
+    transform: translate(45%, 1000%);
   }
 }
