--- a/snprc_ehr/src/client/SndLookupsManagement/styles/sndLookupsManagement.scss
+++ b/snprc_ehr/src/client/SndLookupsManagement/styles/sndLookupsManagement.scss
@@ -1,46 +1,108 @@
+// When screen is small
+@media screen and (max-width: 540px) {
+  .snd-lookups-grid {
+    width: 85%;
+  }
+  .grid-panel__grid .table-responsive {
+    height: 28vh !important;
+  }
+}
+
+// When screen is medium-large
+@media screen and (min-width: 540px) {
+  .snd-lookups-grid {
+    display: flex;
+  }
+  .lookups-placeholder {
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+  }
+  .grid-panel__grid .table-responsive {
+    height: 54vh !important;
+  }
+  .grid-panel__search-input {
+    width: 75% !important;
+  }
+}
+
+// Make header sticky
 .lk-header-ct {
   position: sticky;
   top: 0;
   z-index: 1000;
 }
 
+// Move title to center
 .lk-body-title {
   width: 60%;
-  transform: translate(16%, 0%);
+  transform: translate(19%, 0%);
   display: block;
+  color: #555;
 }
 
+// Div with both grids
 .snd-lookups-grid {
   margin: auto;
+  align-items: center;
+  height: 100%;
+  width: 80%;
 }
 
+// Placeholder heading for grid not loaded
+.lookups-placeholder {
+  color: #555;
+  display: flex;
+  position: absolute;
+
+}
+
+// Div for alert above grids
 .success-alert {
   position: relative;
   margin: auto;
   border-radius: 5px;
   transform: translate(0, -20%);
-  width: 81%;
+  width: 78%;
   left: .8%;
 }
 
+// Div for component modals
 .lookups-modal {
   position: fixed;
   transform: translate(0, 10%)
 }
 
-.modal-lg {
-  position: relative;
+// Div for custom buttons
+.manage-buttons {
+  display: inline-block;
+  white-space: nowrap;
+  vertical-align: middle;
+}
+.manage-buttons .dropdown-menu {
+  position: absolute;
 }
 
-.labkey-wizard-pills {
-  overflow: scroll;
-  height: 40vh;
+// Div for Edit modal forms
+.form-group-create-update {
+  margin-bottom: 10px;
+}
+.form-group-create-update .control-label {
+  float: left;
+  width: 80px;
+  margin-top: 5px;
+  margin-right: 6px;
+}
+.form-group-create-update .form-control {
+  width: 70%;
+}
+.form-group-create-update .checkbox {
+  padding-top: 8px;
+  margin-bottom: -10px;
 }
 
-.form-check {
-  display: inline-flex;
-}
-
+// GridPanel styling customization
 .grid-panel__grid .table-responsive {
   overflow-y: scroll;
   width: 100%;
@@ -51,33 +113,54 @@
   align-items: center;
   border-radius: 4px;
 }
-
 .grid-panel__grid .table-responsive thead {
   position: sticky;
   top: -1px;
   z-index: 2;
 }
-
 .grid-panel__grid .table-responsive thead th {
   background-color: #FFFFFF;
   /* fix for weird FF behavior, described in https://stackoverflow.com/questions/7517127/ */
   background-clip: padding-box;
   font-weight: bold;
 }
-
 .grid-panel__grid .table-responsive thead th#__selection__,
 .grid-panel__grid .table-responsive thead th .grid-header-cell__body {
   padding: 5px;
 }
+.grid-header-cell__dropdown-menu {
+  position: fixed;
+}
+.grid-panel {
+  border-color: #ddd;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  box-shadow: 0 1px 1px rgba(0,0,0,.05);
+}
+.grid-panel__body {
+  font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+.panel-default .panel-heading {
+  background-color: #fff;
+  font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 18px;
+  color: #555;
+  line-height: 1.428571429;
+  border-bottom: 1px solid #ddd;
+  margin: 15px 15px 0 15px;
+  padding: 0px 0px 10px;
+}
+.ws-pre-wrap {
+  color: #555;
+}
 
+// Customize button bar on grid
 .button-bar__section {
   display: flex;
   float: left;
   margin-bottom: 5px;
 }
-
 .input-group-addon {
-  width: 35px !important;
   border-radius: 5px;
   padding: 6px 12px;
   font-size: 14px;
@@ -88,54 +171,18 @@
   background-color: #eee;
   border: 1px solid #ccc;
 }
-
 .input-group-addon, .input-group-btn, .input-group .form-control {
   display: table-cell;
 }
-
 .input-group-addon, .input-group-btn {
-  width: 1%;
   white-space: nowrap;
   vertical-align: middle;
 }
-
 .grid-panel__input-group {
-  display: inline-flex;
   margin-left: 5px;
 }
 
-.grid-header-cell__dropdown-menu {
-  position: fixed;
-}
-
-.grid-panel {
-  border-color: #ddd;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
-  box-shadow: 0 1px 1px rgba(0,0,0,.05);
-}
-
-.grid-panel__body {
-  font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-
-.panel-default .panel-heading {
-  background-color: #fff;
-  font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 18px;
-  color: #333;
-  line-height: 1.428571429;
-  border-bottom: 1px solid #ddd;
-  margin: 15px 15px 0 15px;
-  padding: 0px 0px 10px;
-}
-
-.manage-buttons {
-  display: inline-block;
-  white-space: nowrap;
-  vertical-align: middle;
-}
-
+// Labkey modal customization
 .modal-content {
   font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
   position: relative;
@@ -151,6 +198,20 @@
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
+
+// Labkey modal fix for Filters
+.modal-lg {
+  position: relative;
+}
+.labkey-wizard-pills {
+  overflow: scroll;
+  height: 40vh;
+}
+.form-check {
+  display: inline-flex;
+}
+
+// Styling for all buttons
 .btn {
   touch-action: manipulation;
   cursor: pointer;
@@ -168,9 +229,9 @@
   line-height: 1.428571429;
 }
 
+// Styling for all forms
 .form-control {
   border-radius: 5px;
-  //display: inline-block;
   display: block;
   width: 100%;
   height: 34px;
@@ -187,127 +248,16 @@
   -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
+
+// Styling for all dropdowns
 .dropdown-menu {
   border-radius: 5px;
 }
-
-.ws-pre-wrap {
-  color: #555;
-}
-
-.lookups-placeholder {
-  color: #555;
-  display: flex;
-  //vertical-align: middle;
-  position: absolute;
-
-}
-
-.selection-status__count, .selection-status__select-all {
-  display: none;
-}
-
-.grid-panel__loading {
-  display: none;
-}
-
-.selection-status__clear-all {
-  display: none;
-}
-
-.manage-buttons .dropdown-menu {
-  position: absolute;
-}
-
-.form-group-create-update {
-  margin-bottom: 10px;
-}
-
-.form-group-create-update .control-label {
-  float: left;
-  width: 80px;
-  margin-top: 5px;
-  margin-right: 6px;
-}
-
-.form-group-create-update .form-control {
-  width: 70%;
-}
-
-.form-group-create-update .checkbox {
-  padding-top: 8px;
-  margin-bottom: -10px;
-}
-
 .select-dropdown {
   width: 60%;
 }
 
-.view-menu {
+// Removing labkey objects don't need to be displayed
+.selection-status__count, .selection-status__select-all, .grid-panel__loading, .selection-status__clear-all, .view-menu {
   display: none;
-}
-
-@media screen and (max-width: 540px) {
-  .snd-lookups-grid {
-    width: 90vw;
-  }
-
-  .grid-panel__grid .table-responsive {
-    height: 28vh !important;
-  }
-
-  .lookups-placeholder {
-
-  }
-
-}
-
-@media screen and (min-width: 540px) and (max-width: 1280px) {
-  .snd-lookups-grid {
-    width: 80vw;
-  }
-
-  .grid-panel__grid .table-responsive {
-    height: 38vh !important;
-  }
-  .grid-panel__search-input {
-    width: 75% !important;
-  }
-  .lookups-placeholder {
-    transform: translate(5%, 800%);
-  }
-
-}
-
-@media screen and (min-width: 1280px) and (max-width: 1919px) {
-  .snd-lookups-grid {
-    width: 81vw;
-  }
-
-  .grid-panel__grid .table-responsive {
-    height: 48vh !important;
-  }
-
-  .grid-panel__search-input {
-    width: 75% !important;
-  }
-  .lookups-placeholder {
-    transform: translate(30%, 900%);
-  }
-}
-
-@media screen and (min-width: 1920px) {
-  .snd-lookups-grid {
-    width: 81vw;
-  }
-
-  .grid-panel__grid .table-responsive {
-    height: 58vh !important;
-  }
-  .grid-panel__search-input {
-    width: 75% !important;
-  }
-  .lookups-placeholder {
-    transform: translate(45%, 1000%);
-  }
 }
