--- a/snprc_ehr/src/client/SndLookupsManagement/styles/sndLookupsManagement.scss
+++ b/snprc_ehr/src/client/SndLookupsManagement/styles/sndLookupsManagement.scss
@@ -1,27 +1,43 @@
 // When screen is small
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 992px)  {
   .snd-lookups-grid {
     width: 85%;
+    padding-bottom: 3%;
   }
-  .grid-panel__grid .table-responsive {
-    height: 28vh !important;
+
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+  .lookups-placeholder {
+    top: 30000%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
   }
 }
 
 // When screen is medium-large
-@media screen and (min-width: 540px) {
+@media screen and (min-width: 1200px) {
   .snd-lookups-grid {
     display: flex;
   }
+  .lookups-grid {
+    flex: 1 !important;
+  }
+
+  .lookupSets-grid {
+    flex: 0 0 500px;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
   .lookups-placeholder {
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -800%)
+    transform: translate(-50%, -50%)
   }
-  .grid-panel__grid .table-responsive {
-    height: 54vh !important;
-  }
+
   .grid-panel__search-input {
     width: 75% !important;
   }
@@ -49,6 +65,7 @@
   height: 100%;
   width: 80%;
 }
+
 
 // Placeholder heading for grid not loaded
 .lookups-placeholder {
@@ -111,6 +128,7 @@
   transition: .5s ease;
   align-items: center;
   border-radius: 4px;
+  height: 54vh !important;
 }
 .grid-panel__grid .table-responsive thead {
   position: sticky;
@@ -127,7 +145,9 @@
 .grid-panel__grid .table-responsive thead th .grid-header-cell__body {
   padding: 5px;
 }
+.grid-panel__grid .table-responsive {
 
+}
 .grid-header-cell__dropdown-menu .dropdown-menu {
   position: absolute;
 }
