--- a/snprc_ehr/src/client/SndLookupsManagement/styles/sndLookupsManagement.scss
+++ b/snprc_ehr/src/client/SndLookupsManagement/styles/sndLookupsManagement.scss
@@ -16,6 +16,11 @@
   }
 }
 
+@media screen and (min-width: 1200px) and (max-width: 1700px) {
+  .button-bar__section {
+    display: block !important;
+  }
+}
 // When screen is medium-large
 @media screen and (min-width: 1200px) {
   .snd-lookups-grid {
@@ -36,10 +41,6 @@
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
-  }
-
-  .grid-panel__search-input {
-    width: 75% !important;
   }
 }
 
