Add nonces to popular pages, use modern URLs

--- a/snprc_ehr/resources/views/begin.html
+++ b/snprc_ehr/resources/views/begin.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=scriptNonce%>">
 
     let webpart = <%=webpartContext%>;
     let ctx = EHR.Utils.getEHRContext(webpart.wrapperDivId);
