added panel to animal history

--- a/snprc_ehr/resources/views/sndEventsWidgetWebpart.html
+++ b/snprc_ehr/resources/views/sndEventsWidgetWebpart.html
@@ -1,4 +1,4 @@
-<script type="application/javascript" nonce="<%=scriptNonce%>">
+<script type="application/javascript">
     +function() {
         LABKEY.App.loadApp('SndEventsWidgetWebpart', <%=webpartContext%>.wrapperDivId, <%=webpartContext%>);
     }();
