--- a/snprc_ehr/src/client/SndEventsWidget/styles/sndEventsWidget.scss
+++ b/snprc_ehr/src/client/SndEventsWidget/styles/sndEventsWidget.scss
@@ -34,6 +34,10 @@
   padding: 0px 0px 10px;
 }
 
+.app {
+  height: 1000%
+}
+
 .widget-modal-body {
   width: 100%;
   height: 100%;
@@ -56,7 +60,7 @@
 }
 
 .grid-panel__grid .table-responsive {
-  overflow-y: scroll;
+  //overflow-y: scroll;
   width: 100%;
   z-index: 1;
   top: 0;
@@ -64,7 +68,7 @@
   transition: .5s ease;
   align-items: center;
   border-radius: 4px;
-  height: 54vh !important;
+  height: 100%;
 }
 .grid-panel__grid .table-responsive thead {
   position: sticky;
@@ -124,4 +128,89 @@
 
 .charge-id-popover {
   white-space: pre-wrap;
+}
+
+// Styling for all buttons
+.btn {
+  touch-action: manipulation;
+  cursor: pointer;
+  border-radius: 5px;
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: normal;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  background-image: none;
+  border: 1px solid rgba(0,0,0,0);
+  padding: 6px 12px;
+  font-size: 12px;
+  line-height: 1.428571429;
+}
+
+// Styling for all forms
+.form-control {
+  border-radius: 5px;
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+// Customize button bar on grid
+.button-bar__section {
+  display: flex;
+  float: left;
+  margin-bottom: 5px;
+}
+.input-group-addon {
+  border-radius: 5px;
+  padding: 6px 12px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1;
+  color: #555;
+  text-align: center;
+  background-color: #eee;
+  border: 1px solid #ccc;
+}
+.input-group-addon, .input-group-btn, .input-group .form-control {
+  display: table-cell;
+}
+.input-group-addon, .input-group-btn {
+  white-space: nowrap;
+  vertical-align: middle;
+}
+.grid-panel__input-group {
+  margin-left: 5px;
+}
+
+.input-group-btn {
+  border-radius: 5px;
+  color: #555;
+  background-color: #fff;
+  border: 1px solid #ccc;
+}
+
+.grid-panel__filter-status {
+  display: block;
+  white-space: pre-wrap;
+  padding-top: 40px;
+}
+
+.pencil-btn {
+  color: #0479a8;
+  border: none;
+  background: none;
 }
