--- a/snprc_ehr/src/client/SndEventsWidget/styles/sndEventsWidget.scss
+++ b/snprc_ehr/src/client/SndEventsWidget/styles/sndEventsWidget.scss
@@ -22,41 +22,18 @@
 }
 
 #procedure-entry-widget {
-  height: 600px;
-  width: 100%;
-  border-radius: 4px;
-  background-color: #fff;
-  font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
-  color: #555;
-  line-height: 1.428571429;
-  /*border-bottom: 1px solid #555;*/
-  margin: 15px 15px 0 15px;
-  padding: 0px 0px 10px;
-}
-
-.app {
-  height: 1000%
-}
-
-.widget-modal-body {
-  width: 100%;
-  height: 100%;
-}
-
-.widget-modal {
-  font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
-  border-radius: 5px;
-  transform: translate(0, 10%);
-  overflow: hidden;
-
+  height: 700px;  /* in order that both header and footer of .modal would be on the screen */
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .modal-dialog {
-  width: 60%;
-}
-
-.widget-modal .modal-content {
-  //width: 210%;
+  margin: auto;
+  height: 100%;
+  width: auto;
+  min-width: 60%;
+  position: relative;
+  display: table;
 }
 
 .grid-panel__grid .table-responsive {
@@ -213,4 +190,17 @@
   color: #0479a8;
   border: none;
   background: none;
+}
+
+.fade {
+  opacity: unset;
+}
+
+.list-group-item {
+  display: flex;
+  margin: 5px;
+}
+
+.field-name {
+  margin: 0 5px 0 5px;
 }
