Add nonces to script tags

--- a/snprc_ehr/resources/views/_header.html
+++ b/snprc_ehr/resources/views/_header.html
@@ -71,7 +71,7 @@
     }
 </style>
 
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=scriptNonce%>">
     //apply theme color to title
     window.addEventListener('load', function () {
         var menuBar = document.getElementById('menubar');
