--- a/snprc_ehr/resources/views/dataAdmin.html
+++ b/snprc_ehr/resources/views/dataAdmin.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=scriptNonce%>">
 
 Ext4.onReady(function (){
 
@@ -33,7 +33,7 @@ Ext4.onReady(function (){
             colWidth: 330,
             renderer: function(item){
                 var cfg = {
-                    html: '<a href="<%=contextPath%>/ehr<%=containerPath%>/updateTable.view?schemaName='+item.schemaName+'&query.queryName='+item.queryName+'">'+item.title+'</a>',
+                    html: '<a href="<%=contextPath%><%=containerPath%>/ehr-updateTable.view?schemaName='+item.schemaName+'&query.queryName='+item.queryName+'">'+item.title+'</a>',
                     style: 'padding-left:5px;padding-bottom:8px'
                 };
 
@@ -83,7 +83,7 @@ Ext4.onReady(function (){
             colWidth: 330,
             renderer: function(item){
                 var cfg = {
-                    html: '<a href="<%=contextPath%>/ehr<%=containerPath%>/updateTable.view?schemaName='+item.schemaName+'&query.queryName='+item.queryName+'">'+item.title+'</a>',
+                    html: '<a href="<%=contextPath%><%=containerPath%>/ehr-updateTable.view?schemaName='+item.schemaName+'&query.queryName='+item.queryName+'">'+item.title+'</a>',
                     style: 'padding-left:5px;padding-bottom:8px'
                 };
 
@@ -125,7 +125,7 @@ Ext4.onReady(function (){
             colWidth: 340,
             renderer: function(item){
                 var cfg = {
-                    html: '<a href="<%=contextPath%>/ehr<%=containerPath%>/updateTable.view?schemaName='+item.schemaName+'&query.queryName='+item.queryName+'">'+item.title+'</a>',
+                    html: '<a href="<%=contextPath%><%=containerPath%>/ehr-updateTable.view?schemaName='+item.schemaName+'&query.queryName='+item.queryName+'">'+item.title+'</a>',
                     style: 'padding-left:5px;padding-bottom:8px'
                 };
 
