--- a/snprc_ehr/resources/views/datasets.html
+++ b/snprc_ehr/resources/views/datasets.html
@@ -1,6 +1,6 @@
 // To add additional datasets (not in the study schema) to this page, add additional unions to the Study.BrowseDataSets.sql query
 
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=scriptNonce%>">
 
     Ext4.onReady(function () {
         var webpart = <%=webpartContext%>;
