--- a/snprc_ehr/resources/views/ehrAdmin.html
+++ b/snprc_ehr/resources/views/ehrAdmin.html
@@ -30,8 +30,8 @@ Ext4.onReady(function (){
         },{
             header: 'Logs',
             items: [
-                {name: 'Labkey.log', url: '<%=contextPath%>/admin-showPrimaryLog.view'},
-                {name: 'Labkey-errors.log', url: '<%=contextPath%>/admin-showAllErrors.view'}
+                {name: 'Labkey.log', url: '<%=contextPath%>' + '/admin-showPrimaryLog.view'},
+                {name: 'Labkey-errors.log', url: '<%=contextPath%>' + '/admin-showAllErrors.view'}
             ]
         },{
             header: 'Notifications',
