--- a/snprc_ehr/resources/views/snprcMenu.html
+++ b/snprc_ehr/resources/views/snprcMenu.html
@@ -1,6 +1,6 @@
 <div class="ehr-nav-menu-panel"></div>
 
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=scriptNonce%>">
 
     Ext4.onReady(function(){
         Ext4.QuickTips.init();
