--- a/snprc_ehr/resources/views/animalHistory.html
+++ b/snprc_ehr/resources/views/animalHistory.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=scriptNonce%>">
 
     LABKEY.Utils.requiresScript("snprc_ehr/utils.js", function () {});
     Ext4.onReady(function (){
