--- a/snprc_ehr/src/client/SndEventsWidget/styles/sndEventsWidget.scss
+++ b/snprc_ehr/src/client/SndEventsWidget/styles/sndEventsWidget.scss
@@ -196,6 +196,12 @@
   background: none;
 }
 
+.trash-btn {
+  color: #0479a8;
+  border: none;
+  background: none;
+}
+
 .fade {
   opacity: unset;
 }
