--- a/snprc_ehr/resources/views/sndEventsWidgetWebpart.view.xml
+++ b/snprc_ehr/resources/views/sndEventsWidgetWebpart.view.xml
@@ -1,7 +1,7 @@
 <view xmlns="http://labkey.org/data/xml/view" title="SND Events Widget">
-    <permissions>
-        <permission name="read"/>
-    </permissions>
+    <permissionClasses>
+        <permissionClass name="org.labkey.api.security.permissions.ReadPermission"/>
+    </permissionClasses>
     <dependencies>
         <dependency path="gen/SndEventsWidgetWebpart"/>
     </dependencies>
