--- a/snprc_r24/resources/views/welcome.view.xml
+++ b/snprc_r24/resources/views/welcome.view.xml
@@ -1,5 +1,5 @@
 <view xmlns="http://labkey.org/data/xml/view" title="R24 ETL Module">
-    <permissions>
-        <permission name="read"/>
-    </permissions>
+    <permissionClasses>
+        <permissionClass name="org.labkey.api.security.permissions.ReadPermission"/>
+    </permissionClasses>
 </view>
